--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 # Evinta el uso de cache, permitiendo hacer cambios a los templates sin tener
 # que recargar la aplicación
+spring.profiles.active: default
+spring.datasource.username: sa
+spring.datasource.password:
+spring.jpa.properties.hibernate.dialect: \
+org.hibernate.dialect.HSQLDialect
+spring.jpa.database: HSQL
+spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor: \
+org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
+logging.level.root: INFO
+logging.level.org.hibernate: ERROR
+logging.level.org.springframework.web: DEBUG
 spring.thymeleaf.cache: false
+es.ucm.fdi.base-path: /tmp/iw
