--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 #   (que crea una bd HSQLDB en memoria, cada vez que se lanza el proyecto)
 # - externaldb, entonces usa application-externaldb.properties
 #   (que espera una bd HSQLDB externa disponible en localhost)
+server.port = 8090
 spring.profiles.active: default
 
 spring.datasource.username: sa
