--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,10 @@
 			<artifactId>owasp-java-html-sanitizer</artifactId>
 			<version>20180219.1</version>
 		</dependency>
+		<dependency>
+		  <groupId>org.springframework.security</groupId>
+		  <artifactId>spring-security-messaging</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
